--- a/test/dummy/app/views/comboboxes/open.html.erb
+++ b/test/dummy/app/views/comboboxes/open.html.erb
@@ -1,3 +1,4 @@
 <%= combobox_tag "state",
       id: "state-field",
+      open: true,
       options: [ "Alabama", "Florida", "Michigan", "Minnesota", "Mississippi", "Missouri" ] %>
