Test html content

--- a/app/views/combobox/_combobox.html.erb
+++ b/app/views/combobox/_combobox.html.erb
@@ -1,4 +1,4 @@
-<%= tag.div data: parent_data do %>
+<%= tag.div class: "hotwire-combobox", data: parent_data do %>
   <%= tag.input **attrs %>
 
   <%= tag.ul id: listbox_id, hidden: "", role: :listbox, data: { "combobox-target": "listbox" } do |ul| %>
