--- a/test/dummy/app/views/comboboxes/new.html.erb
+++ b/test/dummy/app/views/comboboxes/new.html.erb
@@ -1,3 +1,3 @@
 <%= combobox_tag "state",
       id: "state-field",
-      options: [ "Alabama", "Florida", "Michigan", "Minnesota", "Mississippi", "Missouri" ] %>
+      options: @states %>
