--- a/app/views/combobox/_combobox.html.erb
+++ b/app/views/combobox/_combobox.html.erb
@@ -1,11 +1,17 @@
 <%= tag.div class: "hotwire-combobox", data: parent_data do %>
+  <%= hidden_field_tag value_field_attrs.delete(:name),
+        value_field_attrs.delete(:value), **value_field_attrs %>
+
   <%= tag.input **attrs %>
 
   <%= tag.ul id: listbox_id, hidden: "", role: :listbox,
         data: { "combobox-target": "listbox" } do |ul| %>
     <% options.each do |option| %>
-      <%= tag.li option.content, role: :option,
-            data: { "filterable-as": option.filterable_as } %>
+      <%= tag.li option.content, id: option.try(:id),
+            role: :option, data: {
+              "filterable-as": option.try(:filterable_as),
+              "autocompletable-as": option.try(:autocompletable_as),
+              "value": value_for_listbox_option(option) } %>
     <% end %>
   <% end %>
 <% end %>
