Only autocomplete when strings match from the start

--- a/test/dummy/app/views/comboboxes/html.html.erb
+++ b/test/dummy/app/views/comboboxes/html.html.erb
@@ -1,8 +1,10 @@
 <style>
   .hotwire-combobox ul { padding: 0; }
   .hotwire-combobox li { list-style: none; }
+  .selected { background-color: #f0f0f0; }
 </style>
 
 <%= combobox_tag "state",
       id: "state-field",
-      options: html_combobox_options(@states) %>
+      options: html_combobox_options(@states),
+      data: { "combobox-selected-class": "selected" } %>
