Use fieldset as a wrapper

--- a/app/views/combobox/_combobox.html.erb
+++ b/app/views/combobox/_combobox.html.erb
@@ -1,4 +1,4 @@
-<%= tag.div class: "hotwire-combobox", data: parent_data do %>
+<%= tag.fieldset class: "hotwire-combobox", data: parent_data do %>
   <%= hidden_field_tag value_field_attrs.delete(:name),
         value_field_attrs.delete(:value), **value_field_attrs %>
 
