--- a/test/dummy/app/views/comboboxes/prefilled.html.erb
+++ b/test/dummy/app/views/comboboxes/prefilled.html.erb
@@ -2,5 +2,5 @@
   .selected { background-color: #f0f0f0; }
 </style>
 
-<%= combobox_tag "state", "MI", id: "state-field",
-      options: @states, data: { "combobox-selected-class": "selected" } %>
+<%= hw_combobox_tag "state", "MI", id: "state-field",
+      options: @states, data: { "hw-combobox-selected-class": "selected" } %>
