--- a/test/dummy/app/views/comboboxes/html.html.erb
+++ b/test/dummy/app/views/comboboxes/html.html.erb
@@ -1,6 +1,6 @@
 <style>
-  .hw-combobox ul { padding: 0; }
-  .hw-combobox li { list-style: none; }
+  .hw-combobox [role="listbox"] { padding: 0; }
+  .hw-combobox [role="option"] { list-style: none; }
   .selected { background-color: #f0f0f0; }
 </style>
 
