--- a/test/dummy/app/views/comboboxes/open.html.erb
+++ b/test/dummy/app/views/comboboxes/open.html.erb
@@ -1,1 +1,1 @@
-<%= hw_combobox_tag "state", id: "state-field", open: true, options: @states %>
+<%= combobox_tag "state", id: "state-field", open: true, options: @states %>
