--- a/test/dummy/app/views/comboboxes/plain.html.erb
+++ b/test/dummy/app/views/comboboxes/plain.html.erb
@@ -1,3 +1,3 @@
-<%= hw_combobox_tag "state", id: "state-field", options: @states %>
+<%= combobox_tag "state", id: "state-field", options: @states %>
 
 <%= button_tag "focusable element" %>
