Implement list-only autocomplete

--- a/test/dummy/app/views/comboboxes/html.html.erb
+++ b/test/dummy/app/views/comboboxes/html.html.erb
@@ -7,3 +7,5 @@
 <%= combobox_tag "state", id: "state-field",
       options: html_combobox_options(@states),
       data: { "hw-combobox-selected-class": "selected" } %>
+
+<div id="separate-element" style="width: 100px; height: 100px; background-color: red;"></div>
