--- a/test/dummy/app/views/comboboxes/plain.html.erb
+++ b/test/dummy/app/views/comboboxes/plain.html.erb
@@ -1,3 +1,5 @@
 <%= combobox_tag "state", id: "state-field", options: @states %>
 
 <%= button_tag "focusable element" %>
+
+<div id="separate-element" style="width: 100px; height: 100px; background-color: red;"></div>
