Add default css styles

--- a/test/dummy/app/views/comboboxes/_state.html.erb
+++ b/test/dummy/app/views/comboboxes/_state.html.erb
@@ -1,4 +1,4 @@
 <div style="display: flex; flex-direction: row; align-items: center;">
-  <span style="width: 10px; height: 10px; border-radius: 100%; background-color: green; margin-right: 6px;"></span>
+  <span class="state state--<%= state.downcase %>"></span>
   <p><%= state %></p>
 </div>
