--- a/test/dummy/app/views/comboboxes/prefilled.html.erb
+++ b/test/dummy/app/views/comboboxes/prefilled.html.erb
@@ -1,6 +1,1 @@
-<style>
-  .selected { background-color: #f0f0f0; }
-</style>
-
-<%= combobox_tag "state", "MI", id: "state-field",
-      options: @states, data: { "hw-combobox-selected-class": "selected" } %>
+<%= combobox_tag "state", "MI", id: "state-field", options: @states %>
