--- a/app/views/hotwire_combobox/_pagination.html.erb
+++ b/app/views/hotwire_combobox/_pagination.html.erb
@@ -1,4 +1,3 @@
 <%# locals: (src:) -%>
 
-<%= turbo_frame_tag :hotwire_combobox_pagination, src: src, loading: :lazy,
-      data: { hw_combobox_target: "paginationFrame" } %>
+<%= turbo_frame_tag :hotwire_combobox_pagination, src: src, loading: :lazy %>
