--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 
     <%= combobox_style_tag %>
     <%= javascript_importmap_tags %>
+
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
+      body { font-family: 'Inter', sans-serif; }
+    </style>
   </head>
 
   <body>
