--- a/test/dummy/app/views/comboboxes/html.html.erb
+++ b/test/dummy/app/views/comboboxes/html.html.erb
@@ -39,7 +39,7 @@
 </style>
 
 <%
-  @states = hw_combobox_options State.all,
+  @states = combobox_options State.all,
     id: :abbreviation,
     value: :abbreviation,
     display: :name,
