--- a/test/dummy/app/views/comboboxes/async.html.erb
+++ b/test/dummy/app/views/comboboxes/async.html.erb
@@ -1,1 +1,1 @@
-<%= combobox_tag "movie", id: "movie-field", async_src: movies_path, dialog_label: "Choose your movie!" %>
+<%= combobox_tag "movie", movies_path, id: "movie-field", dialog_label: "Choose your movie!" %>
