--- a/test/dummy/app/views/comboboxes/async_html.html.erb
+++ b/test/dummy/app/views/comboboxes/async_html.html.erb
@@ -10,4 +10,4 @@
   }
 </style>
 
-<%= combobox_tag "movie", id: "movie-field", async_src: movies_html_path %>
+<%= combobox_tag "movie", movies_html_path, id: "movie-field" %>
