--- a/test/dummy/app/views/comboboxes/prefilled.html.erb
+++ b/test/dummy/app/views/comboboxes/prefilled.html.erb
@@ -1,1 +1,1 @@
-<%= combobox_tag "state", "MI", id: "state-field", options: @states %>
+<%= combobox_tag "state", @states, value: "MI", id: "state-field" %>
