--- a/test/dummy/app/views/comboboxes/list_autocomplete.html.erb
+++ b/test/dummy/app/views/comboboxes/list_autocomplete.html.erb
@@ -1,1 +1,1 @@
-<%= combobox_tag "state", id: "state-field", options: @states, autocomplete: :list %>
+<%= combobox_tag "state", @states, id: "state-field", autocomplete: :list %>
