--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%# stylesheet_link_tag "preflight", "data-turbo-track": "reload" %>
 
     <%= combobox_style_tag %>
     <%= javascript_importmap_tags %>
