--- a/app/views/hotwire_combobox/combobox/_dialog.html.erb
+++ b/app/views/hotwire_combobox/combobox/_dialog.html.erb
@@ -1,7 +1,9 @@
 <%= tag.div **component.dialog_focus_trap_attrs %>
 
-<%= tag.dialog **component.dialog_attrs do %>
-  <%= tag.label component.dialog_label, **component.dialog_label_attrs %>
-  <%= tag.input **component.dialog_input_attrs %>
-  <%= tag.ul **component.dialog_listbox_attrs %>
+<%= tag.div **component.dialog_wrapper_attrs do %>
+  <%= tag.dialog **component.dialog_attrs do %>
+    <%= tag.label component.dialog_label, **component.dialog_label_attrs %>
+    <%= tag.input **component.dialog_input_attrs %>
+    <%= tag.ul **component.dialog_listbox_attrs %>
+  <% end %>
 <% end %>
