Use provided id for combobox, not hidden field

--- a/test/dummy/app/views/comboboxes/new_options.html.erb
+++ b/test/dummy/app/views/comboboxes/new_options.html.erb
@@ -7,10 +7,10 @@
 <% end %>
 
 <%= form_with model: User.new, url: new_options_form_path, method: :post do |form| %>
-  <%= form.label "Favorite State", for: "allow-new-hw-combobox" %>
+  <%= form.label "Favorite State", for: "allow-new" %>
   <%= form.combobox :favorite_state_id, State.all, id: "allow-new", name_when_new: "user[favorite_state_attributes][name]" %>
 
-  <%= form.label "Home State", for: "disallow-new-hw-combobox" %>
+  <%= form.label "Home State", for: "disallow-new" %>
   <%= form.combobox :home_state_id, State.all, id: "disallow-new" %>
 
   <%= form.submit %>
